scrollbar fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,29 +9,22 @@ body{
   padding: 0;
   box-sizing: border-box;
 }
-
-
-/* Initial state - scrollbar hidden for all elements */
-*::-webkit-scrollbar {
-  width: 0;
-}
-
-/* Hover state - show scrollbar for all elements */
-*:hover::-webkit-scrollbar {
+/* width */
+::-webkit-scrollbar {
   width: 5px;
 }
 
-/* Track for all elements */
-*::-webkit-scrollbar-track {
+/* Track */
+::-webkit-scrollbar-track {
   background: #f1f1f1;
 }
 
-/* Handle for all elements */
-*::-webkit-scrollbar-thumb {
+/* Handle */
+::-webkit-scrollbar-thumb {
   background: #888;
 }
 
-/* Handle on hover for all elements */
-*::-webkit-scrollbar-thumb:hover {
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
